# summit26-registration

./: .gitignore  Cargo.toml  Makefile  README.md  Trunk.registration.toml  build.rs  config.example.toml  flake.nix.example  index.html
migrations/: 20260430000100_create_attendees.sql  20260510000100_create_workers.sql  20260520000100_update_attendees_profile_columns.sql
sql_examples/: import_worker_csv.sql  init.sql  update_workers_csv.sql
src/: lib.rs  main.rs  models.rs  styles.css
src/frontend/: app.rs  config.rs  data.rs  mod.rs  sync.rs
src/server/: auth.rs  config.rs  db.rs  error.rs  mod.rs  rest_client.rs  routes.rs  state.rs  websocket.rs
