[package]
name = "summit26-registration"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[features]
server = []

[[bin]]
name = "server"
path = "src/bin/server.rs"
required-features = ["server"]

[dependencies]
leptos = { version = "=0.8.0", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
config = "0.15"
futures = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.6", features = ["http", "json"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["CloseEvent", "ErrorEvent", "Event", "Location", "MessageEvent", "WebSocket", "Window"] }
